--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: deadhour_flutter
-description: DeadHour - Morocco's first social venue discovery platform
+description: DeadHour - World's first infinite-scalability ADDON platform for Morocco
 
 publish_to: 'none'
 
