--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,69 +1,109 @@
-name: deadhour_flutter
-description: DeadHour - World's first infinite-scalability ADDON platform for Morocco
-
-publish_to: 'none'
-
+name: deadhour
 version: 1.0.0+1
+publish_to: none
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: '>=3.6.0 <4.0.0'
+  flutter: '>=3.27.0'
+
+description: A new Flutter project.
 
 dependencies:
+  change_app_package_name: ^1.5.0
+  crypto: ^3.0.6
+  cupertino_icons: ^1.0.2
+  device_info_plus: ^11.3.0
+  dio: ^5.8.0+1
+  easy_localization: ^3.0.7+1
+  firebase_core: ^3.13.0
+  firebase_messaging: ^15.2.5
+  app_links: ^6.4.0
+  app_settings: ^5.1.1
   flutter:
     sdk: flutter
-  
-  # Navigation
-  go_router: ^12.1.3
-  
-  # State Management
-  provider: ^6.1.1
-  
-  # UI Components
-  cupertino_icons: ^1.0.2
-  flutter_svg: ^2.0.9
-  cached_network_image: ^3.3.0
-  
-  # Internationalization
-  intl: ^0.18.1
-  
-  # HTTP & Networking
-  http: ^1.1.0
-  
-  # Local Storage
-  shared_preferences: ^2.2.2
-  
-  # Date & Time
-  timezone: ^0.9.2
-  
-  # Icons
-  font_awesome_flutter: ^10.6.0
-  
-  # Image Picker
-  image_picker: ^1.0.4
-  
-  # URL Launcher
-  url_launcher: ^6.2.1
+  flutter_dotenv: ^5.2.1
+  flutter_inappwebview: ^6.1.5
+  flutter_launcher_icons: ^0.14.3
+  flutter_local_notifications: ^19.0.0
+  flutter_native_splash: ^2.4.4
+  flutter_riverpod: ^2.6.1
+  fluttertoast: ^8.2.4
+  font_awesome_flutter: ^10.8.0
+  go_router: ^15.0.0
+  image: ^4.5.4
+  internet_connection_checker_plus: ^2.7.1
+  logger: ^2.1.0
+  meta: ^1.12.0
+  package_info_plus: ^8.3.0
+  path_provider: ^2.1.5
+  permission_handler: ^12.0.0
+  rxdart: ^0.28.0
+  sentry_flutter: ^8.13.0
+  share_plus: ^11.0.0
+  shared_preferences: ^2.5.3
+  shimmer: ^3.0.0
+  url_launcher: ^6.1.12
+  uuid: ^4.5.1
+  back_button_interceptor: ^6.0.2
 
 dev_dependencies:
+  alchemist: ^0.12.0
+  build_runner: ^2.4.15
+  cider: ^0.2.8
+  custom_lint: ^0.7.5
+  dcm: ^1.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
+  freezed_lint: ^0.0.9
+  integration_test:
+    sdk: flutter
+  json_serializable: ^6.9.0
+  mockito: ^5.4.4
+  path_provider_platform_interface: ^2.1.0
+  plugin_platform_interface: ^2.1.8
+  riverpod_generator: ^2.6.5
+  riverpod_lint: ^2.3.7
+  sentry_dart_plugin: ^2.4.1
+  very_good_analysis: ^7.0.0
+  flutter_inappwebview_platform_interface: any
+  state_notifier: any
 
 flutter:
   uses-material-design: true
-  
   assets:
+    - assets/
     - assets/images/
-    - assets/icons/
-  
-  fonts:
-    - family: Poppins
-      fonts:
-        - asset: assets/fonts/Poppins-Regular.ttf
-        - asset: assets/fonts/Poppins-Medium.ttf
-          weight: 500
-        - asset: assets/fonts/Poppins-SemiBold.ttf
-          weight: 600
-        - asset: assets/fonts/Poppins-Bold.ttf
-          weight: 700
-
+    - assets/translations/
+    - .env
+  generate: true
+sentry:
+  upload_debug_symbols: true
+  upload_source_maps: true
+  project: "flutter"
+  org: "edsteine-l1"
+  auth_token: "${SENTRY_AUTH_TOKEN}"
+fonts:
+  - family: Poppins
+    fonts:
+      - asset: assets/fonts/Poppins-Regular.ttf
+      - asset: assets/fonts/Poppins-Medium.ttf
+        weight: 500
+      - asset: assets/fonts/Poppins-SemiBold.ttf
+        weight: 600
+      - asset: assets/fonts/Poppins-Bold.ttf
+        weight: 700
+  - family: Tajawal
+    fonts:
+      - asset: assets/Tajawal/Tajawal-Regular.ttf
+      - asset: assets/Tajawal/Tajawal-ExtraLight.ttf
+        weight: 200
+      - asset: assets/Tajawal/Tajawal-Light.ttf
+        weight: 300
+      - asset: assets/Tajawal/Tajawal-Medium.ttf
+        weight: 500
+      - asset: assets/Tajawal/Tajawal-Bold.ttf
+        weight: 700
+      - asset: assets/Tajawal/Tajawal-ExtraBold.ttf
+        weight: 800
+      - asset: assets/Tajawal/Tajawal-Black.ttf
+        weight: 900
