--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   url_launcher: ^6.1.12
   uuid: ^4.5.1
   back_button_interceptor: ^6.0.2
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   alchemist: ^0.12.0
@@ -72,38 +73,5 @@ flutter:
   uses-material-design: true
   assets:
     - assets/
-    - assets/images/
-    - assets/translations/
     - .env
   generate: true
-sentry:
-  upload_debug_symbols: true
-  upload_source_maps: true
-  project: "flutter"
-  org: "edsteine-l1"
-  auth_token: "${SENTRY_AUTH_TOKEN}"
-fonts:
-  - family: Poppins
-    fonts:
-      - asset: assets/fonts/Poppins-Regular.ttf
-      - asset: assets/fonts/Poppins-Medium.ttf
-        weight: 500
-      - asset: assets/fonts/Poppins-SemiBold.ttf
-        weight: 600
-      - asset: assets/fonts/Poppins-Bold.ttf
-        weight: 700
-  - family: Tajawal
-    fonts:
-      - asset: assets/Tajawal/Tajawal-Regular.ttf
-      - asset: assets/Tajawal/Tajawal-ExtraLight.ttf
-        weight: 200
-      - asset: assets/Tajawal/Tajawal-Light.ttf
-        weight: 300
-      - asset: assets/Tajawal/Tajawal-Medium.ttf
-        weight: 500
-      - asset: assets/Tajawal/Tajawal-Bold.ttf
-        weight: 700
-      - asset: assets/Tajawal/Tajawal-ExtraBold.ttf
-        weight: 800
-      - asset: assets/Tajawal/Tajawal-Black.ttf
-        weight: 900
