--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dev_dependencies:
   very_good_analysis: ^7.0.0
   flutter_inappwebview_platform_interface: any
   state_notifier: any
+  flutter_lints: ^6.0.0
 
 flutter:
   uses-material-design: true
