--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,28 +1,103 @@
-# This file configures the analyzer, which statically analyzes Dart code to
-# check for errors, warnings, and lints.
-#
-# The issues identified by the analyzer are surfaced in the UI of Dart-enabled
-# IDEs (https://dart.dev/tools#ides-and-editors). The analyzer can also be
-# invoked from the command line by running `flutter analyze`.
+# DeadHour MVP - Analysis Options Configuration
+# This file configures the analyzer for optimal MVP development experience
 
-# The following line activates a set of recommended lints for Flutter apps,
-# packages, and plugins designed to encourage good coding practices.
+include: package:flutter_lints/flutter.yaml
 
+analyzer:
+  # Exclude trash folder and generated files from analysis
+  exclude:
+    - "trash/**"
+    - "lib/generated/**"
+    - "build/**"
+    - "android/**"
+    - "ios/**"
+    - "web/**"
+    - "windows/**"
+    - "linux/**"
+    - "macos/**"
+    - "**/*.g.dart"
+    - "**/*.freezed.dart"
+    - "**/*.mocks.dart"
+
+  # Custom error codes for MVP development
+  errors:
+    # Relax some rules for MVP development speed
+    todo: ignore
+    fixme: ignore
+    missing_return: error
+    dead_code: warning
+    unused_import: warning
+    unused_local_variable: ignore  # Relaxed for MVP development
+    
+  # Strong mode settings
+  strong-mode:
+    implicit-casts: false
+    implicit-dynamic: false
 
 linter:
-  # The lint rules applied to this project can be customized in the
-  # section below to disable rules from the `package:flutter_lints/flutter.yaml`
-  # included above or to enable additional rules. A list of all available lints
-  # and their documentation is published at https://dart.dev/lints.
-  #
-  # Instead of disabling a lint rule for the entire project in the
-  # section below, it can also be suppressed for a single line of code
-  # or a specific dart file by using the `// ignore: name_of_lint` and
-  # `// ignore_for_file: name_of_lint` syntax on the line or in the file
-  # producing the lint.
   rules:
-    # avoid_print: false  # Uncomment to disable the `avoid_print` rule
-    # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
-
-# Additional information about this file can be found at
-# https://dart.dev/guides/language/analysis-options
+    # MVP Development Friendly Rules
+    
+    # DISABLED RULES (for faster MVP development)
+    avoid_print: false              # Allow print statements for debugging
+    avoid_slow_async_io: false      # Allow for MVP mock data
+    avoid_catching_errors: false    # Allow catching errors for MVP error handling
+    prefer_single_quotes: false     # Allow either quote style
+    sort_constructors_first: false  # Don't enforce constructor ordering
+    always_declare_return_types: false  # Allow for faster prototyping
+    
+    # ENABLED RULES (important for app stability)
+    avoid_empty_else: true
+    avoid_null_checks_in_equality_operators: true
+    avoid_returning_null_for_future: true
+    avoid_types_as_parameter_names: true
+    control_flow_in_finally: true
+    empty_catches: true
+    hash_and_equals: true
+    no_adjacent_strings_in_list: true
+    no_duplicate_case_values: true
+    prefer_void_to_null: true
+    test_types_in_equals: true
+    throw_in_finally: true
+    unnecessary_statements: true
+    unrelated_type_equality_checks: true
+    use_key_in_widget_constructors: true
+    valid_regexps: true
+    
+    # FLUTTER SPECIFIC (enabled for better app quality)
+    avoid_unnecessary_containers: true
+    sized_box_for_whitespace: true
+    use_full_hex_values_for_flutter_colors: true
+    prefer_const_constructors: true
+    prefer_const_literals_to_create_immutables: true
+    avoid_function_literals_in_foreach_calls: true
+    
+    # PERFORMANCE RULES (enabled for Morocco market optimization)
+    close_sinks: true
+    cancel_subscriptions: true
+    
+    # CODE STYLE (relaxed for MVP development)
+    camel_case_types: true
+    constant_identifier_names: true
+    file_names: true
+    non_constant_identifier_names: true
+    library_names: true
+    library_prefixes: true
+    
+    # DOCUMENTATION (relaxed for MVP)
+    public_member_api_docs: false   # Don't require docs for MVP
+    lines_longer_than_80_chars: false  # Allow longer lines for readability
+    
+    # DART LANGUAGE RULES (enabled for code quality)
+    always_use_package_imports: false  # Allow relative imports for MVP
+    avoid_relative_lib_imports: true
+    prefer_relative_imports: false
+    
+    # NULLABLE SAFETY (enabled for stability)
+    avoid_returning_null_for_void: true
+    null_closures: true
+    
+    # MVP SPECIFIC RELAXED RULES
+    diagnostic_describe_all_properties: false  # Skip for MVP widgets
+    use_build_context_synchronously: false     # Relaxed for MVP async operations
+    depend_on_referenced_packages: false       # Allow for MVP dependency flexibility
